--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 html {
-  background: #018ded url(../image/main.jpg);
+  background: url(../image/main.jpg);
   background-size: cover;
   font-family: 'helvetica neue';
   text-align: center;
@@ -16,8 +16,8 @@ body {
 }
 
 .clock {
-  width: 30rem;
-  height: 30rem;
+  width: 40rem;
+  height: 40rem;
   border: 20px solid #222;
   border-radius: 50%;
   margin: 50px auto;
@@ -42,6 +42,9 @@ body {
   top: 50%;
   transform-origin: 100%;
   transform: rotate(90deg);
-  transition: all 0.5s;
+}
+
+.transition {
+  transition: all 0.2s;
   transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
 }
